--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.gravecraft.pearl": "pearl",
+  "item.gravecraft.glowstick": "glowstick",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
