final hackathon push (ui/glowstick changes)

--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -1,6 +1,7 @@
 {
   "item.gravecraft.pearl": "pearl",
   "item.gravecraft.glowstick": "glowstick",
+  "item.gravecraft.tuffy": "tuffy",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
