--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -2,6 +2,7 @@
   "item.gravecraft.pearl": "pearl",
   "item.gravecraft.glowstick": "glowstick",
   "item.gravecraft.tuffy": "tuffy",
+  "item.gravecraft.tuna": "tuna",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
