Mushroom block added

--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -3,6 +3,7 @@
   "item.gravecraft.glowstick": "glowstick",
   "item.gravecraft.tuffy": "tuffy",
   "item.gravecraft.tuna": "tuna",
+  "block.gravecraft.shroom": "Shroom",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
