Broccoli crop not working

--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -5,7 +5,9 @@
   "item.gravecraft.tuna": "Tuna",
   "item.gravecraft.cooked_tuna": "Cooked Tuna",
   "item.gravecraft.broccoli": "Broccoli",
+  "item.gravecraft.brocseeds": "Broccoli Seeds",
   "block.gravecraft.shroom": "Shroom",
+  "block.gravecraft.broccrop": "Broccoli Crop",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
