Broccoli crop not working

--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -8,6 +8,8 @@
   "item.gravecraft.brocseeds": "Broccoli Seeds",
   "block.gravecraft.shroom": "Shroom",
   "block.gravecraft.broccrop": "Broccoli Crop",
+  "block.gravecraft.carrotcrop": "Cave Carrot Crop",
+  "block.gravecraft.cavecarrot": "Cave Carrot",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
