added spider and husk

--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -16,6 +16,8 @@
   "item.gravecraft.candyapple": "Candy Apple",
   "item.gravecraft.chocomilk": "Chocolate Milk Bucket",
   "item.gravecraft.zombieboss_spawn_egg": "Zombie Boss Spawn Egg",
+  "item.gravecraft.spiderboss_spawn_egg": "Spider Boss Spawn Egg",
+  "item.gravecraft.huskboss_spawn_egg": "Husk Boss Spawn Egg",
 
   "itemGroup.gravecrafttab": "GraveCraft Tab"
   
