--- a/src/main/resources/assets/gravecraft/lang/en_us.json
+++ b/src/main/resources/assets/gravecraft/lang/en_us.json
@@ -15,6 +15,8 @@
   "item.gravecraft.grapeseeds": "Grape Seeds",
   "item.gravecraft.candyapple": "Candy Apple",
   "item.gravecraft.chocomilk": "Chocolate Milk Bucket",
+  "item.gravecraft.avocado": "Avocado",
+  "item.gravecraft.avocadoseeds": "Avocado Seeds",
   "item.gravecraft.zombieboss_spawn_egg": "Zombie Boss Spawn Egg",
   "item.gravecraft.spiderboss_spawn_egg": "Spider Boss Spawn Egg",
   "item.gravecraft.huskboss_spawn_egg": "Husk Boss Spawn Egg",
